tests/errors/diagnostics/suggestion_positive.pts
function main() : void {
  int LocalToken = 1;
  int x = LcalToken;
}
